# gh-loc

./: LICENSE  README.md  pyproject.toml
sample/: config.toml
src/: _config.py  _gen.py  _rest.py  _site.py  main.py
